--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -12,7 +12,7 @@ import Tecnologias from "../components/Tecnologias.astro";
       <section id="hero">
         <h1>Diseño <span class="dynamic-gradient">Web</span></h1>
         <p>Diseñamos y creamos tu web.</p>
-        <p>Webs Rápidas y Eficientes con Tecnología de Punta</p>
+        <p>Rápidas y Eficientes con Tecnología de Punta</p>
         <div class="boton">
           <Boton text="Sigueme en GitHub" link="https://github.com/Dreez-Web" />
           <Boton text="Contactanos" link="https://github.com/Dreez-Web" />
