--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -11,7 +11,10 @@ import Card from "../components/Card.astro";
     <main>
       <section id="hero">
         <h1><span class="dynamic-gradient">SHOWCASE</span></h1>
-        <h2>Paginas versatiles. Explora y observa de que somos capaces</h2>
+        <h2>
+          Paginas <span>versatiles</span>. Explora y observa de que somos <span
+            >capaces</span>
+        </h2>
       </section>
       <id class="card-container">
         <ul>
