--- a/src/layouts/LayoutMain.astro
+++ b/src/layouts/LayoutMain.astro
@@ -1,42 +1,41 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 const { title, id, description } = Astro.props;
-import '@fontsource-variable/onest';
+import "@fontsource-variable/onest";
 ---
 
-
-
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>{title}</title>
-	</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      is:inline
+      src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"
+    ></script>
+
+    <title>{title}</title>
+  </head>
 </html>
 <body>
-	<Header/>
-	<main>
-     <slot />
-	</main>
-	<Footer/>
+  <Header />
+  <main>
+    <slot />
+  </main>
+  <Footer />
 </body>
 
-
-<style>
-	html,
-	body {
-		font-family: 'Onest Variable', sans-serif;
-		margin: 0;
-		width: 100%;
-		height: 100%;
-		scroll-behavior: smooth;
-		
-	}
-	
-
-	
-	
+<style is:global>
+  :root {
+    color-scheme:;
+  }
+  html,
+  body {
+    font-family: "Onest Variable", sans-serif;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    scroll-behavior: smooth;
+  }
 </style>
