--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -59,6 +59,7 @@ import Tecnologias from "../components/Tecnologias.astro";
   }
   h1 {
     font-size: 4rem;
+    font-weight: 600;
     margin: 0.25em 0 0.2em;
   }
 
@@ -98,7 +99,7 @@ import Tecnologias from "../components/Tecnologias.astro";
   }
 
   .dynamic-gradient {
-    background: linear-gradient(90deg, #ff6ec4, #7873f5, #4ade80, #ff6ec4);
+    background: linear-gradient(90deg, #ff6ec4, #2c26f0, #23af57, #ff6ec4);
     background-size: 300%;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
