--- a/src/components/logo.astro
+++ b/src/components/logo.astro
@@ -1,43 +1,34 @@
-
-
-    <a
-    href="/"
-    class="link"
-    >
-    <span
-        class="span"
-        >✦</span
-    >
-    <!-- Logo Text -->
-    <span class="span-text">Portfolio</span>
-    </a>
+<a href="/" class="link">
+  <span class="span">✦</span>
+  <!-- Logo Text -->
+  <span class="span-text">Astronaut</span>
+</a>
 
 <style>
-    a{
-		font-family: 'Onest Variable', sans-serif;
-        font-weight: 600;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 1rem;
-        gap: 1rem;
-        text-decoration: none;
-        color: #333;
-    }
+  a {
+    font-family: "Onest Variable", sans-serif;
+    font-weight: 600;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    gap: 1rem;
+    text-decoration: none;
+    color: #333;
+  }
 
-   .span{
-        font-size: 1.25rem;
-        transition: transform 200ms ease-in-out; /* ease-in-out + duration-300 */
-    }
+  .span {
+    font-size: 1.25rem;
+    transition: transform 200ms ease-in-out; /* ease-in-out + duration-300 */
+  }
 
-    .link:hover .span {
-        transform: rotate(-12deg) scale(1.2);
-    }
+  .link:hover .span {
+    transform: rotate(-12deg) scale(1.2);
+  }
 
-    .span-text{
-        font-size: 1rem;
-        transition: transform 200ms ease-in-out; /* ease-in-out + duration-300 */
-    }
-
-   
+  .span-text {
+    font-size: 1rem;
+    font-weight: 700;
+    transition: transform 200ms ease-in-out; /* ease-in-out + duration-300 */
+  }
 </style>
