--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -5,7 +5,7 @@ import Card from "../components/Card.astro";
 import Formulario from "../components/Formulario.astro";
 ---
 
-<section>
+<section class="dark:bg-slate-950">
   <div id="container">
     <img id="background" src={background.src} alt="" fetchpriority="high" />
     <main>
