--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -2,7 +2,7 @@
 import Logo from "../components/Logo.astro";
 ---
 
-<section>
+<section class="dark:bg-slate-950">
   <div>
     <Logo />
     <p>© {new Date().getFullYear()} Andrès</p>
