--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,13 @@ import Layout from "../layouts/LayoutMain.astro";
 import Servicios from "../components/Servicios.astro";
 import Proyectos from "../components/Proyectos.astro";
 import Contacto from "../components/Contacto.astro";
+import Precio from "../components/Precio.astro";
 ---
 
 <Layout title="Desarrollo y Programacion Web">
   <Hero />
   <Servicios />
   <Proyectos />
+  <Precio />
   <Contacto />
 </Layout>
