--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -5,7 +5,7 @@ import Tecnologias from "../components/Tecnologias.astro";
 import Card from "../components/Card.astro";
 ---
 
-<section>
+<section class="pb-8">
   <div class="dark:bg-slate-950" id="container">
     <img id="background" src={background.src} alt="" fetchpriority="high" />
     <main>
@@ -21,9 +21,27 @@ import Card from "../components/Card.astro";
       </section>
       <id class="card-container">
         <ul>
-          <li><Card title="Restaurant" src="../src/assets/astro.svg" /></li>
-          <li><Card title="Academia" src="../src/assets/astro.svg" /></li>
-          <li><Card title="Eventos" src="../src/assets/astro.svg" /></li>
+          <li>
+            <Card
+              title="Restaurant"
+              src="../src/assets/astro.svg"
+              href="https://dounut-astro.vercel.app/"
+            />
+          </li>
+          <li>
+            <Card
+              title="Academia"
+              src="../src/assets/astro.svg"
+              href="https://astro-ink.vercel.app/"
+            />
+          </li>
+          <li>
+            <Card
+              title="Eventos"
+              src="../src/assets/astro.svg"
+              href="https://getastropod.netlify.app/"
+            />
+          </li>
           <li><Card title="Hotel" src="../src/assets/astro.svg" /></li>
           <li><Card title="Blog" src="../src/assets/astro.svg" /></li>
         </ul>
