--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -16,7 +16,7 @@ import "@fontsource-variable/onest";
   .card {
     font-family: "Onest Variable", sans-serif;
     position: relative;
-    width: 400px; /* Ajusta según el tamaño deseado */
+    width: 300px; /* Ajusta según el tamaño deseado */
     height: 200px; /* Ajusta según el tamaño deseado */
     border-radius: 16px; /* Esquinas redondeadas */
     overflow: hidden; /* Para evitar que los elementos internos sobresalgan */
@@ -56,13 +56,13 @@ import "@fontsource-variable/onest";
     position: absolute;
     top: 10px; /* Margen superior */
     left: 10px; /* Margen izquierdo */
-    background-color: white; /* Fondo blanco */
+    background-color: rgb(58, 58, 58); /* Fondo blanco */
     padding: 5px 12px; /* Espaciado interno */
     border-radius: 12px; /* Esquinas redondeadas */
     font-family: Arial, sans-serif; /* Fuente base */
     font-size: 14px; /* Tamaño de texto */
     font-weight: bold; /* Texto en negrita */
-    color: #333; /* Color del texto */
+    color: #e0e0e0; /* Color del texto */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra ligera */
   }
 </style>
