--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -5,7 +5,7 @@ import Tecnologias from "../components/Tecnologias.astro";
 import Astropizza from "../assets/astronautapizza.webp";
 ---
 
-<section>
+<section id="servicios">
   <div class="dark:bg-slate-950" id="container">
     <img id="background" src={background.src} alt="" fetchpriority="high" />
     <main>
