--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,9 +25,10 @@ import Toggle from "../components/ThemeToggle.astro";
 </header>
 <style>
   header {
-    position: sticky;
+    position: fixed;
     top: 0;
     z-index: 1000;
+    width: 100%;
   }
   div {
     font-family: "Onest Variable", sans-serif;
@@ -35,8 +36,8 @@ import Toggle from "../components/ThemeToggle.astro";
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(248, 249, 250);
-    padding: 0.2rem 1rem;
+    background-color: rgba(255, 203, 242, 0.8);
+    padding: 0.1rem 1rem;
     gap: 1rem;
   }
 
