detalles en la navegacion

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -47,6 +47,7 @@ import Tecnologias from "../components/Tecnologias.astro";
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 40px 100px;
   }
 
   #hero {
