--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -7,7 +7,7 @@ import Rest from "../assets/resto.webp";
 import Academia from "../assets/Academia.webp";
 ---
 
-<section class="pb-4" id="proyectos">
+<section class="pb-4 pt-6" id="proyectos">
   <div class="dark:bg-slate-950" id="container">
     <img id="background" src={background.src} alt="" fetchpriority="high" />
     <main>
