Configuracion de colores y espacios

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -18,7 +18,15 @@ import Tecnologias from "../components/Tecnologias.astro";
           de Punta
         </p>
         <div class="boton">
-          <Boton text="Sigueme en GitHub" link="https://github.com/Dreez-Web" />
+          <Boton
+            text="Sigueme en GitHub"
+            link="https://github.com/Dreez-Web"
+            bgColor="#FFFFFF"
+            textColor="#000000"
+            borderColor="#FFFFFF"
+            hoverBgColor="#000000"
+            hoverTextColor="#FFFFFF"
+          />
           <Boton text="Contactanos" link="https://github.com/Dreez-Web" />
         </div>
       </section>
@@ -85,7 +93,7 @@ import Tecnologias from "../components/Tecnologias.astro";
   }
 
   .astronauta {
-    width: 600px; /* Ajusta según el tamaño deseado */
+    width: 500px; /* Ajusta según el tamaño deseado */
     animation: float 5s ease-in-out infinite;
   }
 
