--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -22,6 +22,10 @@ import Astropizza from "../assets/astronautapizza.webp";
         </p>
         <div class="boton">
           <Boton text="Contactanos" link="https://github.com/Dreez-Web" />
+          <Boton
+            text="Sobre mi"
+            link="https://dreez-web.github.io/Personal-Web/"
+          />
         </div>
       </section>
       <img src={Astropizza.src} alt="Astropizza" />
