--- a/src/components/boton.astro
+++ b/src/components/boton.astro
@@ -1,15 +1,28 @@
 ---
-const { link, text } = Astro.props;
+const {
+  link,
+  text,
+  bgColor = "#212121",
+  textColor = "#f5f5f5",
+  borderColor = "#212121",
+  hoverBgColor = "#ffffff",
+  hoverTextColor = "#212121",
+  hoverBorderColor = "#b3b3b3",
+} = Astro.props;
 ---
 
-<a href={link} target="_blank" class="button">
+<a
+  href={link}
+  target="_blank"
+  class="button"
+  style={`--bg-color: ${bgColor}; --text-color: ${textColor}; --border-color: ${borderColor}; --hover-bg-color: ${hoverBgColor}; --hover-text-color: ${hoverTextColor}; --hover-border-color: ${hoverBorderColor};`}
+>
   {text}
 </a>
 
 <style>
   .button {
     display: inline-flex;
-
     width: auto;
     padding: 0.5rem 1rem;
     margin-top: 1.25rem;
@@ -17,17 +30,20 @@ const { link, text } = Astro.props;
     font-weight: 600;
     border-width: 1px;
     border-style: solid;
-    border-color: #212121; /* border-neutral-900 */
+    border-color: var(--border-color, #212121); /* Default border color */
     border-radius: 9999px;
-    background-color: #212121; /* bg-neutral-900 */
-    color: #f5f5f5; /* text-neutral-100 */
+    background-color: var(--bg-color, #212121); /* Default background color */
+    color: var(--text-color, #f5f5f5); /* Default text color */
     transition: all 300ms ease-out;
   }
 
   .button:hover {
-    border-color: #b3b3b3; /* hover:border-neutral-700 */
-    background-color: #ffffff; /* hover:bg-white */
-    color: #212121; /* hover:text-neutral-900 */
+    border-color: var(--hover-border-color, #b3b3b3); /* Hover border color */
+    background-color: var(
+      --hover-bg-color,
+      #ffffff
+    ); /* Hover background color */
+    color: var(--hover-text-color, #212121); /* Hover text color */
   }
 
   a.button {
