--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -29,7 +29,7 @@ import "@fontsource-variable/onest";
   .image {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
   }
 
   /* Hover para añadir profundidad */
