--- a/src/components/Precio.astro
+++ b/src/components/Precio.astro
@@ -38,13 +38,13 @@ import background from "../assets/background.svg";
         class="rounded-3xl rounded-t-3xl bg-white/60 p-8 ring-1 ring-gray-900/10 sm:mx-8 sm:rounded-b-none sm:p-10 lg:mx-0 lg:rounded-bl-3xl lg:rounded-tr-none"
       >
         <h3 id="tier-hobby" class="text-base/7 font-semibold text-indigo-600">
-          Hobby
+          Pymes/Personales
         </h3>
         <p class="mt-4 flex items-baseline gap-x-2">
           <span class="text-5xl font-semibold tracking-tight text-gray-900"
             >$150</span
           >
-          <span class="text-base text-gray-500">/month</span>
+          <span class="text-base text-gray-500">/Un pago</span>
         </p>
         <p class="mt-6 text-base/7 text-gray-600 dark:text-white">
           El plan perfecto si estas comenzando con tu proyecto.
@@ -63,7 +63,7 @@ import background from "../assets/background.svg";
                 d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
                 clip-rule="evenodd"></path>
             </svg>
-            25 products
+            Landing pages
           </li>
           <li class="flex gap-x-3 dark:text-white">
             <svg
@@ -78,7 +78,7 @@ import background from "../assets/background.svg";
                 d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
                 clip-rule="evenodd"></path>
             </svg>
-            Up to 10,000 subscribers
+            4 secciones
           </li>
           <li class="flex gap-x-3 dark:text-white">
             <svg
@@ -93,7 +93,7 @@ import background from "../assets/background.svg";
                 d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
                 clip-rule="evenodd"></path>
             </svg>
-            Advanced analytics
+            5GB de almacenamiento
           </li>
           <li class="flex gap-x-3 dark:text-white">
             <svg
@@ -108,7 +108,7 @@ import background from "../assets/background.svg";
                 d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
                 clip-rule="evenodd"></path>
             </svg>
-            24-hour support response time
+            24/7 soporte
           </li>
         </ul>
         <a
@@ -125,16 +125,16 @@ import background from "../assets/background.svg";
           id="tier-enterprise"
           class="text-base/7 font-semibold text-indigo-400"
         >
-          Empresa/Pymes
+          Empresa/Pymes 2
         </h3>
         <p class="mt-4 flex items-baseline gap-x-2">
           <span class="text-5xl font-semibold tracking-tight text-white"
-            >$99</span
+            >$250</span
           >
-          <span class="text-base text-gray-400">/month</span>
+          <span class="text-base text-gray-400">/Un pago</span>
         </p>
         <p class="mt-6 text-base/7 text-gray-300">
-          Dedicated support and infrastructure for your company.
+          El plan perfecto si ya tienes un proyecto en marcha.
         </p>
         <ul role="list" class="mt-8 space-y-3 text-sm/6 text-gray-300 sm:mt-10">
           <li class="flex gap-x-3">
@@ -150,7 +150,7 @@ import background from "../assets/background.svg";
                 d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
                 clip-rule="evenodd"></path>
             </svg>
-            Unlimited products
+            Pagina Web
           </li>
           <li class="flex gap-x-3">
             <svg
@@ -165,7 +165,7 @@ import background from "../assets/background.svg";
                 d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
                 clip-rule="evenodd"></path>
             </svg>
-            Unlimited subscribers
+            10GB de almacenamiento
           </li>
           <li class="flex gap-x-3">
             <svg
@@ -180,7 +180,7 @@ import background from "../assets/background.svg";
                 d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
                 clip-rule="evenodd"></path>
             </svg>
-            Advanced analytics
+            4 paginas/secciones
           </li>
           <li class="flex gap-x-3">
             <svg
@@ -195,7 +195,7 @@ import background from "../assets/background.svg";
                 d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
                 clip-rule="evenodd"></path>
             </svg>
-            Dedicated support representative
+            Correo empresarial
           </li>
           <li class="flex gap-x-3">
             <svg
@@ -210,7 +210,7 @@ import background from "../assets/background.svg";
                 d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
                 clip-rule="evenodd"></path>
             </svg>
-            Marketing automations
+            24/7 soporte
           </li>
           <li class="flex gap-x-3">
             <svg
@@ -225,7 +225,7 @@ import background from "../assets/background.svg";
                 d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
                 clip-rule="evenodd"></path>
             </svg>
-            Custom integrations
+            Integracion a redes sociales
           </li>
         </ul>
         <a
@@ -236,6 +236,11 @@ import background from "../assets/background.svg";
         >
       </div>
     </div>
+    <p
+      class="mx-auto mt-6 max-w-2xl text-pretty text-center text-lg font-medium text-gray-600 sm:text-xl/8 dark:text-white"
+    >
+      Consulte por planes de actualizacion y mantencion mensual.
+    </p>
   </div>
 </section>
 
