Actualizacion seccion precio, servicios y contacto

--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -20,8 +20,12 @@ import Astropizza from "../assets/astronautapizza.webp";
           trabajamos contigo para impulsar el crecimiento de tu proyecto y hacer
           realidad tus ideas.
         </p>
+        <p class="dark:text-white">
+          Ya tienes una pagina pero esta desactualizada o simplemente quieres
+          <span>renovar</span> su diseño?. Porque partir desde cero. Podemos re-diseñar,
+          actualizar y optimizar tu pagina web para que se vea moderna y atractiva.
+        </p>
         <div class="boton">
-          <Boton text="Contactanos" link="https://github.com/Dreez-Web" />
           <Boton
             text="Sobre mi"
             link="https://dreez-web.github.io/Personal-Web/"
