--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -11,7 +11,9 @@ import Formulario from "../components/Formulario.astro";
     <main>
       <section id="hero">
         <h1>Contactanos</h1>
-        <Formulario />
+        <h3>E-mail: alpuis.andres@gmail.com</h3>
+        <h3>Whatsapp: +569-56354273</h3>
+        <h3>Instagram: @Astronaut-web</h3>
       </section>
     </main>
   </div>
@@ -47,7 +49,7 @@ import Formulario from "../components/Formulario.astro";
     padding: 86px;
     margin-top: 3rem;
     margin-bottom: 4rem;
-    width: 500px;
+    width: 700px;
     background-color: rgb(247, 247, 247, 0.5);
     border-radius: 50px;
   }
@@ -55,5 +57,11 @@ import Formulario from "../components/Formulario.astro";
   h1 {
     font-size: 4rem;
     font-weight: bold;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: rgb(120, 121, 121);
   }
 </style>
