--- a/src/components/Precio.astro
+++ b/src/components/Precio.astro
@@ -112,7 +112,7 @@ import background from "../assets/background.svg";
           </li>
         </ul>
         <a
-          href="#"
+          href="#contacto"
           aria-describedby="tier-hobby"
           class="mt-8 block rounded-md px-3.5 py-2.5 text-center text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-indigo-200 hover:ring-indigo-300 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 sm:mt-10"
           >Empieza hoy</a
@@ -229,7 +229,7 @@ import background from "../assets/background.svg";
           </li>
         </ul>
         <a
-          href="#"
+          href="#contacto"
           aria-describedby="tier-enterprise"
           class="mt-8 block rounded-md bg-indigo-500 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 sm:mt-10"
           >Empieza hoy</a
