--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -27,7 +27,7 @@ import Tecnologias from "../components/Tecnologias.astro";
             hoverBgColor="#000000"
             hoverTextColor="#FFFFFF"
           />
-          <Boton text="Contactanos" link="https://github.com/Dreez-Web" />
+          <Boton text="Contactanos" link="#contacto" />
         </div>
       </section>
       <img src={astronauta.src} alt="Astronauta" class="astronauta" />
