--- a/src/components/boton.astro
+++ b/src/components/boton.astro
@@ -13,7 +13,7 @@ const {
 
 <a
   href={link}
-  target="_blank"
+  target="_self"
   class="button"
   style={`--bg-color: ${bgColor}; --text-color: ${textColor}; --border-color: ${borderColor}; --hover-bg-color: ${hoverBgColor}; --hover-text-color: ${hoverTextColor}; --hover-border-color: ${hoverBorderColor};`}
 >
@@ -21,7 +21,6 @@ const {
 </a>
 
 <style>
-<<<<<<< Updated upstream
   .button {
     display: inline-flex;
     width: auto;
@@ -37,23 +36,6 @@ const {
     color: var(--text-color, #f5f5f5); /* Default text color */
     transition: all 300ms ease-out;
   }
-=======
-    .button {
-  display: inline-flex;
-  width: auto;
-  padding: 0.5rem 1rem;
-  margin-top: 1.25rem;
-  font-size: 1rem;
-  font-weight: 600;
-  border-width: 1px;
-  border-style: solid;
-  border-color: #212121; /* border-neutral-900 */
-  border-radius: 9999px;
-  background-color: #212121; /* bg-neutral-900 */
-  color: #f5f5f5; /* text-neutral-100 */
-  transition: all 300ms ease-out;
-}
->>>>>>> Stashed changes
 
   .button:hover {
     border-color: var(--hover-border-color, #b3b3b3); /* Hover border color */
