media screen update

--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -64,4 +64,19 @@ import Formulario from "../components/Formulario.astro";
     font-weight: bold;
     color: rgb(120, 121, 121);
   }
+
+  @media (max-width: 768px) {
+    #hero {
+      padding: 2rem;
+      width: 100%;
+    }
+
+    h1 {
+      font-size: 2rem;
+    }
+
+    h3 {
+      font-size: 1rem;
+    }
+  }
 </style>
