--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,6 @@ import Toggle from "../components/ThemeToggle.astro";
             </li>
           ))
         }
-        <Toggle />
       </ul>
     </nav>
   </div>
@@ -60,5 +59,11 @@ import Toggle from "../components/ThemeToggle.astro";
 
   a:hover {
     color: #0070f3;
+  }
+
+  @media screen {
+    .menu {
+      display: none;
+    }
   }
 </style>
