--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -180,4 +180,23 @@ import Gym from "../assets/gym.webp";
       background-position: 100% 50%;
     }
   }
+
+  @media (max-width: 768px) {
+    #hero {
+      padding: 2rem;
+      width: 100%;
+    }
+
+    h1 {
+      font-size: 2rem;
+    }
+
+    h2 {
+      font-size: 1rem;
+    }
+
+    .card-container {
+      width: 100%;
+    }
+  }
 </style>
