--- a/src/components/Tecnologias.astro
+++ b/src/components/Tecnologias.astro
@@ -38,4 +38,10 @@ import GoogleIcon from "../components/Icons/GoogleIcon.astro";
   li {
     margin: 0 10px;
   }
+
+  @media (max-width: 768px) {
+    .icon-list {
+      display: none;
+    }
+  }
 </style>
