--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -61,7 +61,7 @@ import Toggle from "../components/ThemeToggle.astro";
     color: #0070f3;
   }
 
-  @media screen {
+  @media screen and (max-width: 768px) {
     .menu {
       display: none;
     }
