--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -20,10 +20,12 @@ import Astropizza from "../assets/astronautapizza.webp";
           trabajamos contigo para impulsar el crecimiento de tu proyecto y hacer
           realidad tus ideas.
         </p>
+
         <p class="dark:text-white">
-          Ya tienes una pagina pero esta desactualizada o simplemente quieres
-          <span>renovar</span> su diseño?. Porque partir desde cero. Podemos re-diseñar,
-          actualizar y optimizar tu pagina web para que se vea moderna y atractiva.
+          <span>Porque partir desde CERO</span><br />
+          Ya tienes una pagina pero esta desactualizada o simplemente quieres renovar
+          su diseño?. Podemos re-diseñar, actualizar y optimizar tu pagina web para
+          que se vea moderna y atractiva.
         </p>
         <div class="boton">
           <Boton text="Contactanos" link="#contacto" />
@@ -86,7 +88,7 @@ import Astropizza from "../assets/astronautapizza.webp";
     font-size: 20px;
   }
   span {
-    color: #f03cae;
+    color: #f03c69;
     font-weight: bold;
   }
   p {
