--- a/src/components/logo.astro
+++ b/src/components/logo.astro
@@ -1,7 +1,7 @@
 <a href="/" class="link">
   <span class="dark:text-white" id="span">✦</span>
   <!-- Logo Text -->
-  <span class="dark:text-white" class="span-text">Astronaut</span>
+  <span class="dark:text-white" class="span-text">Astronaut-Web</span>
 </a>
 
 <style>
