--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -5,7 +5,7 @@ import Boton from "../components/boton.astro";
 import Tecnologias from "../components/Tecnologias.astro";
 ---
 
-<section class="dark:bg-slate-950">
+<section id="section" class="dark:bg-slate-950">
   <div id="container">
     <img id="background" src={background.src} alt="" fetchpriority="high" />
     <main>
@@ -127,17 +127,28 @@ import Tecnologias from "../components/Tecnologias.astro";
   }
 
   @media (max-width: 768px) {
+    .section {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    #container {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+    }
     #hero {
       padding: 2rem;
       width: 100%;
     }
 
     h1 {
-      font-size: 2rem;
+      font-size: 2.5rem;
     }
 
     p {
-      font-size: 1rem;
+      font-size: 1.5rem;
     }
 
     .astronauta {
