--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -132,6 +132,7 @@ import Astropizza from "../assets/astronautapizza.webp";
     #hero {
       padding: 2rem;
       width: 100%;
+      align-items: center;
     }
 
     h1 {
